[tool.poetry]
name = "cipher_eat2153"
version = "0.1.0"
description = "This is a package for MDS"
authors = ["Elliott <eat2153@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
